--- a/toc.yaml
+++ b/toc.yaml
@@ -68,6 +68,10 @@ toc:
                - s390x-dh-profiles.md
                - bare_metal_server_profile.md
                - profiles_benchmark.md
+           - topicgroup:
+               label: Profile details
+               topics:
+               - vsi-profile-details-accelerated.md
            - vsi_is_provisioning_scripts.md
            - instance-profiles-vpc-bandwidth.md
            - topicgroup:
