--- a/toc.yaml
+++ b/toc.yaml
@@ -80,7 +80,7 @@ toc:
                - vpc-secure-boot.md
                - confidential-computing-secure-boot.md
            - topicgroup:
-               label: Confidential computing with SGX for VPC
+               label: Confidential computing with x86 on VPC
                topics:
                - about-sgx-confidential-computing.md
                - sgx-dcap-attestation.md
