--- a/toc.yaml
+++ b/toc.yaml
@@ -315,6 +315,7 @@ toc:
             label: Cluster networks
             topics:
             - cn-about.md
+            - cn-h100-profile.md
             - cn-planning.md
             - cn-create.md
             - topicgroup:
