--- a/toc.yaml
+++ b/toc.yaml
@@ -176,6 +176,7 @@ toc:
         - topicgroup:
             label: Updating to the latest API code
             topics:
+            - lbaas-listener-policy-migration.md
             - vpn_advanced_configuration_api_migration.md
             - backup_service_API_migration_instance_backups.md
             - vpn-api-migration.md
