--- a/toc.yaml
+++ b/toc.yaml
@@ -546,7 +546,7 @@ toc:
                 - vpn-onprem-vyatta.md
                 - vpn-access-service-endpoint.md
                 - vpn-ha.md
-                - vpn-configure-acls-security-groups.md
+                - vpn-configure-acls.md
                 - vpn-gateway-status.md
                 - vpn-health.md
                 - vpn-view-logs.md
