Next publish push (#4972)
* Update: 19-05-2025

* Update: 19-05-2025

* Update: 19-05-2025

* Update: 19-05-2025

* Update: 19-05-2025

--- a/toc.yaml
+++ b/toc.yaml
@@ -782,8 +782,8 @@ toc:
         - topicgroup:
             label: High availability and disaster recovery
             topics:
-            - ha-dr.md
-            - bc-dr.md
+            - topic: ha-dr-new.md
+              navtitle: Understanding high availability and disaster recovery
             - storage_durability.md
             - topicgroup:
                 label: Backup and recovery by using Veeam
