--- a/toc.yaml
+++ b/toc.yaml
@@ -87,6 +87,8 @@ toc:
                  navtitle: Confidential Computing - Gen 3 (x86)
                - topic: vsi-profile-details-confidential-computing-gen2-z.md
                  navtitle: Confidential Computing - Gen 2 (s390x)
+               - topic: vsi-profile-details-flexible.md
+                 navtitle: Flex profiles (beta)
            - vsi_is_provisioning_scripts.md
            - instance-profiles-vpc-bandwidth.md
            - topicgroup:
