--- a/toc.yaml
+++ b/toc.yaml
@@ -577,6 +577,7 @@ toc:
                 - vpn-using.md
                 - vpn-planning.md
                 - vpn-create.md
+                - vpn-upgrade-ciphers.md
                 - vpn-add-connection.md
                 - vpn-create-ike-policy.md
                 - vpn-create-ipsec-policy.md
