--- a/toc.yaml
+++ b/toc.yaml
@@ -152,7 +152,11 @@ toc:
            - fs_snapshots_about.md
            - backup_service_vpc_about.md
            - vsi_instance_storage.md
-           - bare_metal_server_storage.md
+           - topic: bare_metal_server_storage.md
+             navtitle: About storage options for Bare Metal Servers for VPC
+           - link:
+               label: About IBM Cloud Object Storage
+               href: /cloud-object-storage/cloud-object-storage-about-cloud-object-storage
        - release-notes.md
     - navgroup:
         id: tutorial
