--- a/toc.yaml
+++ b/toc.yaml
@@ -190,6 +190,7 @@ toc:
             id: updating-api
             label: Updating to the latest API code
             topics:
+            - image_api_migration.md
             - lbaas-listener-policy-migration.md
             - vpn_advanced_configuration_api_migration.md
             - backup_service_API_migration_instance_backups.md
