--- a/toc.yaml
+++ b/toc.yaml
@@ -20,7 +20,7 @@ toc:
        topics:
        - getting-started.md
        - link:
-          label: What is Virtual Private Cloud?
+          label: What is Virtual Private Cloud (VPC)?
           href: https://www.ibm.com/cloud/vpc
        - link:
           label: Architecture Center VPC Resources
