--- a/toc.yaml
+++ b/toc.yaml
@@ -970,6 +970,8 @@ toc:
             - nlb-limitations.md
             - pps-limitations.md
             - vni-known-issues.md
+            - vpn-limitations.md
+            - vpn-client-to-site-limitations.md
         - topicgroup:
             id: troubleshooting
             label: Troubleshooting
