--- a/toc.yaml
+++ b/toc.yaml
@@ -55,6 +55,7 @@ toc:
            label: Compute
            topics:
            - vsi_is_about_vpc.md
+           - vsi_burstable.md
            - bare_metal_server_about.md
            - suspend-billing.md
            - topicgroup:
