--- a/toc.yaml
+++ b/toc.yaml
@@ -191,8 +191,9 @@ toc:
             id: updating-api
             label: Updating to the latest API code
             topics:
+            - metadata-identity-migration.md
+            - metadata-identity-migration-beta.md
             - file_storage_vpc_api_migration.md
-            - metadata_identity_migration.md
             - image_api_migration.md
             - lbaas-listener-policy-migration.md
             - vpn_advanced_configuration_api_migration.md
@@ -855,8 +856,16 @@ toc:
                href: https://{DomainName}/apidocs/vpc-beta
             - api-change-log-beta.md
         - topicgroup:
+            id: vpc-identity-api
+            label: VPC Identity API
+            topics:
+            - link:
+               label: Reference
+               href: https://{DomainName}/apidocs/vpc-identity
+            - api-identity-change-log.md
+        - topicgroup:
             id: beta-vpc-identity-api
-            label: Beta VPC identity API
+            label: Beta VPC Identity API
             topics:
             - link:
                label: Reference
@@ -864,7 +873,7 @@ toc:
             - api-identity-beta-change-log.md
         - topicgroup:
             id: vpc-metadata-service-api
-            label: VPC metadata API
+            label: VPC Metadata API
             topics:
             - link:
                label: Reference
@@ -872,7 +881,7 @@ toc:
             - api-metadata-change-log.md
         - topicgroup:
             id: beta-metadata-service-api
-            label: Beta VPC metadata API
+            label: Beta VPC Metadata API
             topics:
             - link:
                label: Reference
