--- a/toc.yaml
+++ b/toc.yaml
@@ -270,17 +270,28 @@ toc:
            - cancel-reservation.md
            - reserved-capacity-status-reasons.md
         - topicgroup:
-            id: metadata-service
             label: Metadata service
             topics:
-            - instance_metadata_vpc_about.md
-            - instance_metadata_vpc_configure.md
-            - instance_metadata_vpc_config_windows.md
-            - instance_metadata_vpc_identity_operations.md
-            - instance_metadata_vpc_access_instance_metadata.md
-            - instance_metadata_vpc_metadata_summary.md
-            - instance_metadata_vpc_use_trusted_profiles.md
-            - instance_metadata_vpc_security_bp.md
+               - topicgroup:
+                   label: Instance metadata service
+                   topics:
+                   - instance_metadata_vpc_about.md
+                   - instance_metadata_vpc_configure.md
+                   - instance_metadata_vpc_config_windows.md
+                   - instance_metadata_vpc_identity_operations.md
+                   - instance_metadata_vpc_access_instance_metadata.md
+                   - instance_metadata_vpc_metadata_summary.md
+                   - instance_metadata_vpc_use_trusted_profiles.md
+                   - instance_metadata_vpc_security_bp.md
+               - topicgroup:
+                   label: Bare metal metadata service
+                   topics:
+                   - bare_metal_server_metadata_about.md
+                   - bare_metal_server_metadata_configure.md
+                   - bare_metal_server_metadata_get_metadata.md
+                   - bare_metal_server_metadata_use_trusted_profiles.md
+                   - bare_metal_server_metadata_config_windows.md
+                   - bare_metal_server_metadata_security_bp.md
         - topicgroup:
             id: placement-groups
             label: Placement groups
